--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>WYSIWYG</title>
+	<link rel="stylesheet" type="text/css" href="wysiwyg.css">
 </head>
 <body>
 <input type="text" id="input">
-<div class="container"></div>
+<div id="container"></div>
 
 <script src="wysiwyg.js"></script>
 </body>
